style: fix horizontal scroll

--- a/src/components/AgentTile/AgentTile.scss
+++ b/src/components/AgentTile/AgentTile.scss
@@ -32,4 +32,8 @@
       font-size: 1.2rem;
     }
   }
+
+  @media (max-width: 960px) {
+    margin-bottom: 0rem;
+  }
 }
